# software-toolbox

./: .gitignore  Dockerfile  README.md  sandbox-entrypoint.sh
.github/workflows/: ci.yml
config/: 01-netplan-config.yaml  CMakeLists.txt  dnsmasq.conf  hostapd.conf  lightdm.conf  rfkill-unblock-wifi.service  shell-script-template.sh  start-hostapd.service  systemd-template.service  udev-rename-network-iface.rules  udev-trigger-script.rules  vncserver  x0vncserver.service  x11vnc.service
dotfiles/: .bashrc  .bashrc_definitions  .bashrc_functions  .minimal_vimrc  .rustfmt.toml  .tmux.conf  .vimrc  .xsessionrc  .ycm_extra_conf.py  coc-settings.json  sample-udev.rules
network/: setup-dhcp-server  setup-dns-server  setup-internet-routing  setup-netplan  setup-routing
network/netplans/: 01-network-manager-all.yaml  dhcp-with-route-metrics.yaml  simple-dhcp.yaml  simple-routing.yaml  simple-static.yaml  simple-wifi.yaml  wifi-wpa-enterprise-eap-peap.yaml  wifi-wpa-enterprise-eap-tls.yaml  wifi-wpa-enterprise-eap-ttls.yaml  wifi-wpa-personal.yaml
setup/: dev-install  dev-install-minimal  dev-install-minimal-arm  docker-install  dotfiles-install  dummy-video-driver-install  micropython-install  network-tools-install  node-install  tiger-vnc-gnome-install  tiger-vnc-xfce4-install  tmux-install  tools-install  vim-install  vnc-gnome-install  vnc-install  webasm-install  x11vnc-gnome-install
tools/: activate-target-vnc  bt-introspect  bt-pane  configure-boot-to-console  configure-netplan  configure-power-management  configure-startup-vnc-server  dev-pane  fzclip  fzcmd  fzgrep  generate-ccls  generate-ssh-key  get-paths  git-fetch-all  git-get-all-status  git-pane  git-pull-all  monitor  netplan-reload  network-pane  ping-test  reset-folder-permissions  run-on-file-update  sandbox  sshfs-mount-at  swp-purge  systemd-pane  tb-bluetooth-pane  tb-conf-autologin  tb-conf-boot-interface  tb-conf-dnsmasq  tb-conf-hostapd  tb-conf-interface-forwarding  tb-conf-netplan  tb-conf-power-management  tb-conf-temp-swap-space  tb-dev-pane  tb-generate-ssh-key  tb-git-pane  (+22 more)
